welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: type mismatch;
 found   : Unit
 required: Int
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = { var compteur:Int =0 ; if (hasTeen(a)) {compteur = compteur +1}; if (hasTeen(b)) {compteur = compteur +1}; if (hasTeen(c)) {compteur = compteur +1}; if (hasTeen(c)) {compteur = compteur +1}} 
                                                                                                                                                                                                                               ^countTeen:5: error: type mismatch;
 found   : Unit
 required: Int
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = { var compteur:Int =0 ; if (hasTeen(a)) {compteur = compteur +1}; if (hasTeen(b)) {compteur = compteur +1}; if (hasTeen(c)) {compteur = compteur +1}; if (hasTeen(c)) {compteur = compteur +1}} 
                                                                                                                                                                                                     ^