welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def hasTeen(a:Int): Boolean = {if (a <= 19 && a >=13) {true} else {false}}



def countTeen(a:Int, b:Int,c:Int,d:Int): Int = { var compteur:Int =0 ; if (hasTeen(a)) {compteur = compteur +1}; if (hasTeen(b)) {compteur = compteur +1}; if (hasTeen(c)) {compteur = compteur +1}; if (hasTeen(c)) {compteur = compteur +1}}